aggregator/deployments/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator-svc
  labels:
    app: aggregator
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: aggregator
