aggregator/deployments/01-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aggregator-vs
spec:
  hosts:
    - '*'
  gateways:
    - aggregator-gw
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: aggregator-svc
